--- a/Gyde/View Controllers/TAShareVC.xib
+++ b/Gyde/View Controllers/TAShareVC.xib
@@ -45,7 +45,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 44}, {320, 372}}</string>
 						<reference key="NSSuperview" ref="117351266"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="375051341"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUIContentMode">5</int>
@@ -65,7 +64,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{320, 44}</string>
 								<reference key="NSSuperview" ref="1008882784"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="201820201"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -80,7 +78,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{5, 8}, {54, 27}}</string>
 								<reference key="NSSuperview" ref="1008882784"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="661951336"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -124,7 +121,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{256, 8}, {54, 27}}</string>
 								<reference key="NSSuperview" ref="1008882784"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="486106161"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -163,7 +159,6 @@
 						</array>
 						<string key="NSFrameSize">{320, 44}</string>
 						<reference key="NSSuperview" ref="117351266"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="185023373"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -184,7 +179,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{98, 55}, {214, 45}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="48432003"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -217,7 +211,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{8, 101}, {304, 44}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="693696798"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -232,7 +225,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{23, 101}, {272, 40}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1071717358"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -268,7 +260,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{10, 211}, {300, 75}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="218082570"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -283,7 +274,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{237, 205}, {77, 83}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="396663074"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -298,7 +288,6 @@
 								<int key="NSvFlags">268</int>
 								<string key="NSFrame">{{237, 212}, {70, 70}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="819983500"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -310,7 +299,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{225, 206}, {12, 83}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="631204183"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -325,7 +313,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{114, 307}, {98, 36}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="348818435"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -350,7 +337,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{10, 307}, {103, 36}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="20069726"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -375,7 +361,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{213, 307}, {99, 36}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="646345533"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -400,7 +385,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 153}, {320, 2}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="632357566"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -415,7 +399,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 295}, {320, 2}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="73476611"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -427,7 +410,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{100, 10}, {210, 40}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="231354113"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -442,7 +424,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{152, 10}, {148, 40}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="918291966"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -467,7 +448,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{161, 55}, {126, 40}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1004824560"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -488,7 +468,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{23, 222}, {190, 50}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1036978842"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -521,7 +500,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{6, 6}, {94, 94}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="407276150"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -536,7 +514,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{15.5, 15.5}, {75, 75}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="338288358"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -551,7 +528,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{8, 165}, {304, 45}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1057311790"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -576,7 +552,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{23, 165}, {260, 40}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="609095351"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -597,7 +572,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{9.5, 350}, {300, 36}}</string>
 								<reference key="NSSuperview" ref="375051341"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="21457689"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -620,7 +594,6 @@
 						</array>
 						<string key="NSFrame">{{0, 44}, {320, 367}}</string>
 						<reference key="NSSuperview" ref="117351266"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="381825814"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -632,7 +605,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 44}, {320, 5}}</string>
 						<reference key="NSSuperview" ref="117351266"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="275702294"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -647,7 +619,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{0, 406}, {320, 5}}</string>
 						<reference key="NSSuperview" ref="117351266"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -659,7 +630,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 411}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="1008882784"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -1087,86 +1057,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">152</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">TAShareVC</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="goBack:">id</string>
-						<string key="initFacebookLogin:">id</string>
-						<string key="recommendButtonTapped:">id</string>
-						<string key="shareButtonTapped:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="goBack:">
-							<string key="name">goBack:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="initFacebookLogin:">
-							<string key="name">initFacebookLogin:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="recommendButtonTapped:">
-							<string key="name">recommendButtonTapped:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="shareButtonTapped:">
-							<string key="name">shareButtonTapped:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="captionField">UITextField</string>
-						<string key="cityLabel">UILabel</string>
-						<string key="map">MKMapView</string>
-						<string key="photoView">UIImageView</string>
-						<string key="placeAddressLabel">UILabel</string>
-						<string key="placeTitleLabel">UILabel</string>
-						<string key="scrollView">UIScrollView</string>
-						<string key="tagLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="captionField">
-							<string key="name">captionField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cityLabel">
-							<string key="name">cityLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="map">
-							<string key="name">map</string>
-							<string key="candidateClassName">MKMapView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="photoView">
-							<string key="name">photoView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="placeAddressLabel">
-							<string key="name">placeAddressLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="placeTitleLabel">
-							<string key="name">placeTitleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="scrollView">
-							<string key="name">scrollView</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tagLabel">
-							<string key="name">tagLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/TAShareVC.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
